welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: ambiguous reference to overloaded definition,
both method move in class Program of type (nbPas: Int, versLAvant: Boolean)Unit
and  method move in class Program of type (nbPas: Int, versLAvant: Boolean)Unit
match argument types (Int,Boolean)
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:3: error: Int does not take parameters
	val resultat = nbPas(6)
                            ^Program:11: error: Int does not take parameters
	val resultat = nbPas(1)
                            ^Program:19: error: Int does not take parameters
	val resultat = nbPas(3)
                            ^Program:27: error: Int does not take parameters
	val resultat = nbPas(0)
                            ^Program:35: error: Int does not take parameters
	val resultat = nbPas(2)
                            ^Program:43: error: Int does not take parameters
	val resultat = nbPas(4)
                            ^Program:42: error: method move is defined twice
  conflicting symbols both originated in file 'plm.runtime31.Program'
     def move(nbPas: Int,versLAvant:Boolean) {
         ^