welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant:Boolean) {
	val resultat = nbPas(6)
		 if(versLAvant==true){
		 	avance()==nbPas; 	
	} else {
		recule()==nbPas; 
	}	
   } 
def move(nbPas: Int,versLAvant:Boolean) {
	val resultat = nbPas(1)
		 if(versLAvant==true){
		 	avance()==nbPas; 	
	} else {
		recule()==nbPas; 
	}	
   } 
def move(nbPas: Int,versLAvant:Boolean) {
	val resultat = nbPas(3)
		 if(versLAvant==true){
		 	avance()==nbPas; 	
	} else {
		recule()==nbPas; 
	}	
   } 
   def move(nbPas: Int,versLAvant:Boolean) {
	val resultat = nbPas(0)
		 if(versLAvant==true){
		 	avance()==nbPas; 	
	} else {
		recule()==nbPas; 
	}	
   } 
   def move(nbPas: Int,versLAvant:Boolean) {
	val resultat = nbPas(2)
		 if(versLAvant==true){
		 	avance()==nbPas; 	
	} else {
		recule()==nbPas; 
	}	
   } 
     def move(nbPas: Int,versLAvant:Boolean) {
	val resultat = nbPas(4)
		 if(versLAvant==true){
		 	avance()==nbPas; 	
	} else {
		recule()==nbPas; 
	}	
   } 